--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.google.code.gson:gson:2.2.4'
-
+    compile 'com.rmtheis:tess-two:5.4.1'
 }
